samples/_failures_safe/1761312945_d6dce3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efe52b66.c: In function ‘main’:
./samples/SAFE/__tmp_efe52b66.c:167:25: error: missing terminating " character
  167 |         fprintf(stderr, "Failed to read input
      |                         ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_efe52b66.c:167:9: error: expected expression at end of input
  167 |         fprintf(stderr, "Failed to read input
      |         ^~~~~~~
./samples/SAFE/__tmp_efe52b66.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_efe52b66.c:167:9: error: expected declaration or statement at end of input
